@@ -5,6 +5,8 @@ import com.solurion.eclipto.task.entity.TaskEntity;
 import com.solurion.eclipto.task.entity.TaskStatusEntity;
 import com.solurion.eclipto.task.mapper.TaskMapper;
 import com.solurion.eclipto.task.mapper.TaskStatusMapper;
+import com.solurion.eclipto.task.mapper.UpdateTaskMapper;
+import com.solurion.eclipto.task.mapper.UpdateTaskStatusMapper;
 import com.solurion.eclipto.task.repository.TaskRepository;
 import com.solurion.eclipto.task.repository.TaskStatusRepository;
 import jakarta.transaction.Transactional;
@@ -14,6 +16,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,109 +25,83 @@ public class TaskServiceImpl implements TaskService {
     private final TaskStatusRepository taskStatusRepository;
     private final TaskMapper taskMapper;
     private final TaskStatusMapper taskStatusMapper;
+    private final UpdateTaskMapper updateTaskMapper;
+    private final UpdateTaskStatusMapper updateTaskStatusMapper;
 
     @Override
-    public TaskInfoDto getTaskInfo(Long projectId, Long taskId) {
-        return taskMapper.toTaskInfoDto(taskRepository.findById(taskId).orElseThrow(
-                () -> new ResponseStatusException(HttpStatus.FORBIDDEN, "Task not found")
-        ));
+    public void deleteTask(Long taskId) {
+        if (taskRepository.existsById(taskId)){
+            taskRepository.deleteById(taskId);
+        } else {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND);
+        }
     }
 
-    @Transactional
     @Override
-    public void createTask(Long projectId, PostLiteTaskRequest postLiteTaskRequest) {
-        if (!taskStatusRepository.existsById(postLiteTaskRequest.getStatusId())) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Task status not found");
-        }
-        TaskEntity task = taskMapper.toTaskEntity(postLiteTaskRequest);
-        task.setProjectId(projectId);
-        taskRepository.save(task);
-    }
-
-    @Transactional
-    @Override
-    public void updateTask(Long projectId, UpdateTaskRequest updateTaskRequest) {
-        TaskEntity task = taskRepository.findById(updateTaskRequest.getId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.FORBIDDEN, "Task not found"));
-        if (updateTaskRequest.getStatusId() != null) {
-            if (taskStatusRepository.findById(updateTaskRequest.getStatusId()).isEmpty()) {
-                throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Not found task status");
-            }
-            task.setStatus(taskStatusRepository.findById(updateTaskRequest.getStatusId()).get());
-            if (updateTaskRequest.getAssignedUserId() != null) {
-                task.setAssignedUserId(updateTaskRequest.getAssignedUserId());
-            }
-
-        }
-
-        if (updateTaskRequest.getTitle() != null) {
-            task.setTitle(updateTaskRequest.getTitle());
-        }
-        if (updateTaskRequest.getDescription() != null) {
-            task.setDescription(updateTaskRequest.getDescription());
-        }
-        if (updateTaskRequest.getPriority() != null) {
-            task.setPriority(taskMapper.toEntityEnum(updateTaskRequest.getPriority()));
-        }
-        if (updateTaskRequest.getDueDate() != null) {
-            task.setDueDate(updateTaskRequest.getDueDate());
-
-        }
-        if (updateTaskRequest.getReporterUserId() != null) {
-            task.setReporterUserId(updateTaskRequest.getReporterUserId());
-        }
-        taskRepository.save(task);
+    public List<TaskInfoDto> getAllTasks(Long projectId) {
+        return taskRepository.findAllByProjectId(projectId)
+                .stream()
+                .map(taskMapper::toTaskInfo)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<TaskLiteDto> getLiteTasks(Long projectId) {
-        return taskRepository.findAllByProjectId(projectId)
+        return taskRepository
+                .findAllByProjectId(projectId)
                 .stream()
-                .map(taskMapper::toTaskLiteDto)
-                .toList();
-    }
-
-    @Override
-    public void createTaskStatus(Long projectId, PostTaskStatusRequest taskStatusRequest) {
-        TaskStatusEntity taskStatusEntity = taskStatusMapper.toEntity(taskStatusRequest);
-        taskStatusEntity.setProjectId(projectId);
-        taskStatusRepository.save(taskStatusEntity);
+                .map(taskMapper::toTaskLite)
+                .collect(Collectors.toList());
     }
 
     @Override
     @Transactional
-    public void updateTaskStatus(Long projectId, TaskStatusDto taskStatusDto) {
-        TaskStatusEntity taskStatusEntity = taskStatusRepository.
-                findById(taskStatusDto.getId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.FORBIDDEN, "Task Status not found"));
-        if (taskStatusDto.getName() != null) {
-            taskStatusEntity.setName(taskStatusDto.getName());
+    public TaskStatusDto getProjectTaskStatuses(Long projectId, Boolean includeTasks) {
+        TaskStatusEntity entity = taskStatusRepository.findByProjectId(projectId);
+        TaskStatusDto statusDto = taskStatusMapper.toDto(entity);
+        if(includeTasks){
+            statusDto.setTasks(
+                    taskRepository.findAllByStatus(entity)
+                            .stream()
+                            .map(taskMapper::toTaskLite)
+                            .collect(Collectors.toList())
+            );
         }
-        if (taskStatusDto.getTint() != null) {
-            taskStatusEntity.setTint(taskStatusDto.getTint());
-        }
-        taskStatusRepository.save(taskStatusEntity);
+        return statusDto;
+    }
+
+    @Override
+    public TaskInfoDto getTask(Long taskId) {
+        return taskMapper.toTaskInfo(taskRepository.findById(taskId)
+                        .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND)));
+    }
+
+    @Override
+    public TaskLiteDto postLiteTask(CreateTaskRequest createTaskRequest) {
+        return taskMapper.toTaskLite(taskRepository.save(taskMapper.toEntity(createTaskRequest)));
+    }
+
+    @Override
+    public TaskStatusDto postTaskStatus(CreateTaskStatusRequest createTaskStatusRequest) {
+        return taskStatusMapper
+                .toDto(taskStatusRepository.save(taskStatusMapper.toEntity(createTaskStatusRequest)));
     }
 
     @Override
     @Transactional
-    public void deleteTask(Long projectId, Long taskId) {
-        if (!taskRepository.existsById(taskId)) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Task not found");
-        }
-        taskRepository.deleteById(taskId);
+    public TaskInfoDto updateTask(Long taskId,UpdateTaskRequest updateTaskRequest) {
+        TaskEntity entity = taskRepository
+                .findById(taskId).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+        updateTaskMapper.updateEntity(updateTaskRequest, entity);
+        return taskMapper.toTaskInfo(entity);
     }
 
     @Override
-    public void deleteAllTask(Long projectId) {
-        taskRepository.deleteAllByProjectId(projectId);
-    }
-
-    @Override
-    public List<TaskInfoDto> getFullTasks(Long projectId) {
-        return taskRepository.findAllByProjectId(projectId)
-                .stream()
-                .map(taskMapper::toTaskInfoDto)
-                .toList();
+    @Transactional
+    public TaskStatusDto updateTaskStatus(Long statusId, TaskStatusDto taskStatusDto) {
+        TaskStatusEntity entity = taskStatusRepository
+                .findById(statusId).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+        updateTaskStatusMapper.updateTaskStatus(taskStatusDto, entity);
+        return taskStatusMapper.toDto(entity);
     }
 }
